src/Components/Styles/style.css
:root {
  --height: 710px;
}

body {
  min-height: 100vh;
  background: rgb(38, 40, 43);
  background: linear-gradient(
    90deg,
    rgba(38, 40, 43, 1) 0%,
    rgba(37, 41, 45, 1) 51%,
    rgba(30, 31, 31, 1) 100%,
    rgba(17, 23, 29, 1) 100%
  );
}

.carousel--container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  height: 80vh;
  /* background: blue; */
}
.carousel--container > button {
  background: #fff;
  color: #000;
  padding: 8px;
}
.carousel--wrapper {
  display: flex;
  justify-content: space-between;
  height: var(--height);
  width: 90%;
  border-radius: 5px;
}

/* .carousel--item { */
/*   display: flex; */
/*   width: 70%; */
/*   height: 100%; */
/*   padding: 1rem; */
/* } */

.carousel--img {
  display: flex;
  width: 70%;
  height: var(--height);
  overflow: hidden;
  justify-content: center;
  border-radius: 20px;
}

.carousel--img_item {
  position: relative;
  white-space: nowrap;
  /* overflow: hidden; */
  width: 100%;
  height: 100%;
  transition: transform 0.5s ease-in-out;
}

.img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: var(--height);
  text-align: center;
  color: #000;
  font-size: 1.6rem;
  /* transition: all 1s cubic-bezier(0.11, 0.75, 0.29, 0.75); */
  transition: all 0.5s linear;
  background-size: cover;
  background-position: center;
  border-radius: 20px;
  box-shadow: 1px 1px 25px 6px rgba(0, 0, 0, 0.4);
}

.img[data-status="active"] {
  transition-delay: 300ms;
}
.img[data-status="unknown"] {
  opacity: 0;
  transform: scale(0);
}
.img[data-status="after"] {
  opacity: 0;
  transform: none;
  transform: translateX(-100%) scale(0);
}
.img[data-status="before"] {
  opacity: 0;
  transform: none;
  transform: translateX(100%) scale(0);
}
.img[data-status="before-active"] {
  opacity: 0;
  transform: translateX(-100%) scale(0);
  transform: none;
}
.img[data-status="after-active"] {
  opacity: 0;
  transform: translateX(100%) scale(0);
  transform: none;
}
.img:nth-child(1) {
  background-image: url("/public/imgs/carousel-images/pc-images/gta-v-pc.jpg");
}

.img:nth-child(2) {
  background-image: url("/public/imgs/carousel-images/pc-images/unbound-pc.jpg");
}

.img:nth-child(3) {
  background-image: url("/public/imgs/carousel-images/pc-images/fortnite-pc.jpg");
}

.img:nth-child(4) {
  background-image: url("/public/imgs/carousel-images/pc-images/sifu-pc.jpg");
}

.img:nth-child(5) {
  background-image: url("/public/imgs/carousel-images/pc-images/diablo-3.jpg");
}

.img:nth-child(6) {
  background-image: url("/public/imgs/carousel-images/pc-images/cod-black-ops-3.jpg");
}

.item--list {
  flex-basis: 30%;
  height: 100%;
  width: calc(600px - 30%);
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.item {
  --item-width: 0%;
  color: #fff;
  display: flex;
  padding: 0.5rem;
  gap: 1rem;
  width: 60%;
  text-transform: uppercase;
  font-family: Arial, Helvetica, sans-serif;
  margin: 8px 0 0 2rem;
  border-radius: 15px;
  font-size: 1.1rem;
  position: relative;
  background: transparent;
  align-items: center;
  transform: scale(0.98);
  transition: transform 0.5s linear;
}
.item > img {
  width: 45px;
  height: 60px;
  border-radius: 5px;
  object-fit: cover;
}
.item.active {
  transform: scale(1.04);
  background: #8b8b8b72;
}

.item::after {
  border-radius: 15px;
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  height: 100%;
  width: var(--item-width);
  background: rgba(255, 255, 255, 0.4);
}

.notransition {
  transition: none;
}

